# url_classification

./: .gitignore  README.md  data.ipynb  dataset_descriptive_stats.py  date_ablation_study.py  example_usage_descriptive_stats.py  gpu.sh  long.sh  pyproject.toml  requirements.txt  short.sh  train_evaluate_url_variants.py  url_structure.py  url_structure_analysis.py
adhoc/: domain_skew.ipynb  method_implementations.ipynb  pipeline.ipynb  raw_data_import.ipynb  results.ipynb  train_evaluate_url_variants.py  url_structure_audit.ipynb
config/: ml_configs.yaml
data/: recognasumm_categories_attributed.csv  uci_categories_attributed.csv
url_classification/: dataset_loading.py  distant_labeling.py  model_config.py  train_and_evaluate.py  viz.py
url_classification/analysis/: evaluation.ipynb  evaluation.py  pipeline.ipynb  training.ipynb  viz.py
url_classification/data_processing/: datasets.py  raw_data_import.ipynb
url_classification/model_training/: models.py  train.py
