[tool.poetry]
name = "url-classification"
version = "0.1.0"
description = ""
authors = ["NHagar <nicholasrhagar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
datasets = "^2.20.0"
pandas = "^2.2.2"
kaggle = "^1.6.17"
transformers = "^4.44.0"
numpy = "^2.0.1"
evaluate = "^0.4.2"
scikit-learn = "^1.5.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]
module_name = "url_classification"