[project]
name = "url-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate==0.33.0",
    "aiohappyeyeballs==2.3.5",
    "aiohttp==3.10.3",
    "aiosignal==1.3.1",
    "anyio==4.4.0",
    "appnope==0.1.4",
    "asttokens==2.4.1",
    "attrs==24.2.0",
    "bleach==6.1.0",
    "certifi==2024.7.4",
    "charset-normalizer==3.3.2",
    "comm==0.2.2",
    "datasets==2.21.0",
    "debugpy==1.8.5",
    "decorator==5.1.1",
    "dill==0.3.8",
    "duckdb==1.0.0",
    "einops==0.8.0",
    "evaluate==0.4.2",
    "executing==2.0.1",
    "filelock==3.15.4",
    "frozenlist==1.4.1",
    "fsspec==2024.6.1",
    "h11==0.14.0",
    "httpcore==1.0.5",
    "httpx==0.27.0",
    "huggingface-hub==0.24.5",
    "idna==3.7",
    "ipykernel==6.29.5",
    "ipython==8.26.0",
    "jedi==0.19.1",
    "jinja2==3.1.4",
    "joblib==1.4.2",
    "jupyter-client==8.6.2",
    "jupyter-core==5.7.2",
    "kaggle==1.6.17",
    "markupsafe==2.1.5",
    "matplotlib>=3.10.3",
    "matplotlib-inline==0.1.7",
    "mpmath==1.3.0",
    "multidict==6.0.5",
    "multiprocess==0.70.16",
    "nest-asyncio==1.6.0",
    "networkx==3.3",
    "numpy==1.26.4",
    "ollama==0.3.1",
    "packaging==24.1",
    "pandas==2.2.2",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pillow==10.4.0",
    "platformdirs==4.2.2",
    "prompt-toolkit==3.0.47",
    "psutil==6.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==17.0.0",
    "pygments==2.18.0",
    "python-dateutil==2.9.0.post0",
    "python-slugify==8.0.4",
    "pytz==2024.1",
    "pyyaml==6.0.2",
    "pyzmq==26.1.0",
    "regex==2024.7.24",
    "requests==2.32.3",
    "safetensors==0.4.4",
    "scikit-learn==1.5.1",
    "scipy==1.14.0",
    "seaborn>=0.13.2",
    "sentence-transformers==3.0.1",
    "setuptools==72.2.0",
    "six==1.16.0",
    "sniffio==1.3.1",
    "stack-data==0.6.3",
    "sympy==1.13.2",
    "text-unidecode==1.3",
    "threadpoolctl==3.5.0",
    "tokenizers==0.19.1",
    "torch==2.4.0",
    "tornado==6.4.1",
    "tqdm==4.66.5",
    "traitlets==5.14.3",
    "transformers==4.44.0",
    "typing-extensions==4.12.2",
    "tzdata==2024.1",
    "urllib3==2.2.2",
    "wcwidth==0.2.13",
    "webencodings==0.5.1",
    "xgboost==2.1.1",
    "xxhash==3.4.1",
    "yarl==1.9.4",
]

[dependency-groups]
dev = [
    "ruff>=0.11.11",
]
